--- a/index.html
+++ b/index.html
@@ -2143,14 +2143,15 @@ Issued: ${ymd()} ${time}`;
     }
 
     
+
 function openReceipt(id){
       const c = customers.find(x=>x.id===id);
       if(!c) return;
 
-      // Always show a preview first (works even if html2canvas is missing)
+      // Render the receipt content in the hidden box (source of truth)
       fillReceiptForCustomer(c);
 
-      // Clone the hidden receipt to display inside the modal
+      // Clone the hidden receipt to display inside the modal (always works)
       const clone = document.getElementById("receiptBox").cloneNode(true);
       clone.id = "receiptPreview";
       clone.style.width = "100%";
@@ -2159,18 +2160,19 @@ function openReceipt(id){
       clone.style.boxShadow = "var(--shadow2)";
 
       window.__lastReceiptDataUrl = null;
+      window.__lastReceiptBlobUrl = null;
 
       const body = `
         <h3>وصل ${escapeHtml(c.name)}</h3>
         <p class="subtxt">
-          إذا ما اشتغل (تحويل لصورة)، هذا غالباً بسبب عدم توفر الانترنت لتحميل مكتبة html2canvas،
-          أو لأن WebView يمنع التحميل. لكن الوصل سيظهر هنا دائماً.
+          الوصل يظهر هنا دائماً. للتنزيل كصورة: اضغط (تنزيل الوصل).
+          إذا ما نزل داخل Kodular WebViewer فالمشكلة من قيود WebView — عندها استخدم (فتح الصورة) أو فعّل حفظ من Kodular.
         </p>
 
         <div style="text-align:center;" id="receiptPreviewContainer"></div>
 
         <div class="grid cols-2" style="margin-top:12px;">
-          <button class="btn primary full" onclick="exportReceiptPng('${id}')">تحويل لصورة</button>
+          <button class="btn primary full" onclick="exportAndDownloadReceipt('${id}')">تنزيل الوصل</button>
           <button class="btn soft full" onclick="hideModal()">إغلاق</button>
         </div>
 
@@ -2184,7 +2186,8 @@ function openReceipt(id){
         </div>
 
         <div class="muted" style="margin-top:10px;">
-          ملاحظة: في Kodular، إذا التحميل ما اشتغل داخل التطبيق، زر (فتح الصورة) يفتحها خارجياً وتقدر تحفظها من هناك.
+          ملاحظة: إذا فتحت الصورة خارجياً تقدر تحفظها من المتصفح/المعرض. 
+          وفي Kodular تقدر تستلم: <b dir="ltr">RECEIPT_PNG:</b> من WebViewStringChanged للحفظ كملف.
         </div>
       `;
       showModal(body);
@@ -2198,19 +2201,19 @@ function openReceipt(id){
       }, 0);
     }
 
-    async function exportReceiptPng(id){
+    async function exportAndDownloadReceipt(id){
       const c = customers.find(x=>x.id===id);
       if(!c) return;
 
+      // Ensure hidden receipt is up to date
       fillReceiptForCustomer(c);
 
       if(!window.html2canvas){
-        showToast("تنبيه", "مكتبة التحويل (html2canvas) غير محمّلة. تأكد من الانترنت أو حمّل الملف مع المكتبات محلياً.", null, 4500);
+        showToast("تنبيه", "مكتبة التحويل (html2canvas) غير محمّلة. تأكد من الانترنت أو افتح الملف عبر متصفح Chrome.", null, 4500);
         return;
       }
 
       try{
-        // Allow QR to render
         await new Promise(r=>setTimeout(r, 120));
 
         const canvas = await html2canvas(document.getElementById("receiptBox"), {
@@ -2220,60 +2223,113 @@ function openReceipt(id){
           allowTaint: true
         });
 
-        const imgUrl = canvas.toDataURL("image/png");
-        window.__lastReceiptDataUrl = imgUrl;
+        // Prefer Blob download (works better than data: on كثير من الأجهزة)
+        let blob = null;
+        if(canvas.toBlob){
+          blob = await new Promise(resolve => canvas.toBlob(resolve, "image/png"));
+        }
+
+        const filename = `receipt-${ymd()}.png`;
+
+        // Also create a dataURL fallback + preview
+        const dataUrl = canvas.toDataURL("image/png");
+        window.__lastReceiptDataUrl = dataUrl;
 
         const imgBox = document.getElementById("receiptImgBox");
         const imgEl  = document.getElementById("receiptImg");
         const acts   = document.getElementById("receiptImgActions");
-
-        if(imgEl) imgEl.src = imgUrl;
+        if(imgEl) imgEl.src = dataUrl;
         if(imgBox) imgBox.style.display = "block";
         if(acts) acts.style.display = "grid";
 
-        showToast("تم", "تم تجهيز صورة الوصل", null, 2200);
+        // If we got a Blob, create blobURL and try to download/share
+        if(blob){
+          try{
+            if(window.__lastReceiptBlobUrl) URL.revokeObjectURL(window.__lastReceiptBlobUrl);
+          }catch(e){}
+          window.__lastReceiptBlobUrl = URL.createObjectURL(blob);
+
+          // Try Web Share API on Android (sometimes works inside WebView)
+          try{
+            const file = new File([blob], filename, { type: "image/png" });
+            if(navigator.canShare && navigator.canShare({ files: [file] })){
+              await navigator.share({ files: [file], title: "Receipt", text: "وصل" });
+              showToast("تم", "تم فتح نافذة المشاركة. اختر حفظ/Files/المعرض.", null, 3500);
+              return;
+            }
+          }catch(e){}
+
+          // Try normal download via <a download>
+          try{
+            const a = document.createElement("a");
+            a.href = window.__lastReceiptBlobUrl;
+            a.download = filename;
+            document.body.appendChild(a);
+            a.click();
+            a.remove();
+            showToast("تم", "بدأ تنزيل الوصل (إذا لم يظهر داخل WebView استخدم فتح الصورة).", null, 3500);
+            return;
+          }catch(e){}
+        }
+
+        // Fallback: dataURL download/open
+        downloadDataUrl(dataUrl, filename);
+        showToast("تم", "تم تجهيز صورة الوصل.", null, 2500);
       }catch(e){
         console.error(e);
-        showToast("خطأ", "تعذر تحويل الوصل لصورة داخل WebView. جرّب زر (فتح الصورة) أو افتح الملف بمتصفح Chrome.", null, 4500);
+        showToast("خطأ", "تعذر تحويل الوصل لصورة داخل WebView. جرّب فتح الملف بمتصفح Chrome.", null, 4500);
       }
     }
 
     function downloadReceiptImage(){
       const dataUrl = window.__lastReceiptDataUrl;
-      if(!dataUrl){
-        showToast("تنبيه", "حوّل الوصل لصورة أولاً (زر تحويل لصورة).", null, 3500);
+      const blobUrl = window.__lastReceiptBlobUrl;
+
+      if(!dataUrl && !blobUrl){
+        showToast("تنبيه", "اضغط (تنزيل الوصل) أولاً.", null, 3500);
         return;
       }
 
-      // In Kodular/AppInventor WebViewer: download attribute may not work.
       const hasBridge = (window.Kodular && window.Kodular.setWebViewString) || (window.AppInventor && window.AppInventor.setWebViewString);
 
+      // In Kodular/AppInventor WebViewer: download may be blocked. Provide bridge + open external.
       if(hasBridge){
-        // Try to open externally (best chance to save on Android)
-        openExternal(dataUrl);
-
-        // Also send base64 to the host (optional for you to handle in Kodular)
         try{
-          const payload = "RECEIPT_PNG:" + dataUrl;
+          const payload = "RECEIPT_PNG:" + (dataUrl || "");
           if(window.Kodular && window.Kodular.setWebViewString) window.Kodular.setWebViewString(payload);
           else if(window.AppInventor && window.AppInventor.setWebViewString) window.AppInventor.setWebViewString(payload);
         }catch(e){}
 
-        showToast("تم", "تم فتح الصورة خارجياً. إذا تريد حفظ مباشر داخل التطبيق، استقبل (RECEIPT_PNG) من WebViewString.", null, 4500);
+        // Try opening externally so user can save
+        openExternal(dataUrl || blobUrl);
+
+        showToast("تم", "تم إرسال الصورة للتطبيق + فتحها خارجياً. للحفظ التلقائي: استقبل RECEIPT_PNG في Kodular.", null, 4500);
         return;
       }
 
-      // Browser fallback
+      // Browser
+      if(blobUrl){
+        try{
+          const a = document.createElement("a");
+          a.href = blobUrl;
+          a.download = `receipt-${ymd()}.png`;
+          document.body.appendChild(a);
+          a.click();
+          a.remove();
+          return;
+        }catch(e){}
+      }
       downloadDataUrl(dataUrl, `receipt-${ymd()}.png`);
     }
 
     function openReceiptImageExternal(){
       const dataUrl = window.__lastReceiptDataUrl;
-      if(!dataUrl){
-        showToast("تنبيه", "حوّل الوصل لصورة أولاً (زر تحويل لصورة).", null, 3500);
+      const blobUrl = window.__lastReceiptBlobUrl;
+      if(!dataUrl && !blobUrl){
+        showToast("تنبيه", "اضغط (تنزيل الوصل) أولاً.", null, 3500);
         return;
       }
-      openExternal(dataUrl);
+      openExternal(dataUrl || blobUrl);
     }
 
     function downloadDataUrl(dataUrl, filename){
@@ -2285,7 +2341,6 @@ function openReceipt(id){
         a.click();
         a.remove();
       }catch(e){
-        // fallback: open the image
         openExternal(dataUrl);
       }
     }
